--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "vue-shop",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "axios": "^1.6.2",
-    "pinia": "^2.1.7",
-    "vue": "^3.3.8",
-    "vue-i18n": "^9.7.1",
-    "vue-router": "^4.2.5"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.0",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-vue": "^9.18.1",
-    "prettier": "^3.1.0",
-    "sass": "^1.69.5",
-    "vite": "^5.0.0",
-    "vue-eslint-parser": "^9.3.2"
-  }
+    "name": "vue-shop",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "lint": "eslint src/ --fix"
+    },
+    "dependencies": {
+        "axios": "^1.6.2",
+        "pinia": "^2.1.7",
+        "vue": "^3.3.8",
+        "vue-i18n": "^9.7.1",
+        "vue-router": "^4.2.5"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-vue": "^4.5.0",
+        "eslint": "^8.54.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-import": "^2.29.0",
+        "eslint-plugin-prettier": "^5.0.1",
+        "eslint-plugin-vue": "^9.18.1",
+        "prettier": "^3.1.0",
+        "sass": "^1.69.5",
+        "vite": "^5.0.0",
+        "vue-eslint-parser": "^9.3.2"
+    }
 }
