--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "lint": "eslint src/ --fix"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.39.0",
         "axios": "^1.6.2",
         "pinia": "^2.1.7",
+        "uuid": "^9.0.1",
         "vue": "^3.3.8",
         "vue-i18n": "^9.7.1",
         "vue-router": "^4.2.5"
